# test_exr_htj2k_jxl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  launch.vs.json  run_mac.sh
.github/workflows/: main.yml
img/: mac-m4max-20250625.html  mac-m4max-20250628.html  mac-m4max-20250630.html  mac-m4max-20250708.html  mac-m4max-20250908.html  win-ryzen5950x-20250625.html  win-ryzen5950x-20250627.html  win-ryzen5950x-20250628.html  win-ryzen5950x-20250630.html  win-ryzen5950x-20250708.html  win-ryzen5950x-20250908.html
src/: fileio.cpp  fileio.h  ic_pfor.h  image.cpp  image.h  image_exr.cpp  image_exr.h  image_jxl.cpp  image_jxl.h  image_mop.cpp  image_mop.h  main.cpp  systeminfo.cpp  systeminfo.h
